--- a/index.css
+++ b/index.css
@@ -2,8 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
   color: rgba(0, 0, 0, 0.9);
+  font-family: "Barlow", sans-serif;
 }
 
 body {
@@ -29,6 +29,10 @@ body {
   padding-top: 12px;
 }
 
+.ma-0 {
+  margin: 0px !important;
+}
+
 .stat__title {
   font-size: 24px;
   margin-bottom: 16px;
@@ -47,7 +51,6 @@ hr {
 .dashboard__item {
   padding: 16px 0px;
   user-select: none;
-  border-radius: 4px;
   text-align: center;
   background: #f0f0f0;
   transition: 0.2s ease-in-out;
@@ -73,7 +76,7 @@ hr {
 
 .user__item {
   border: 1px solid rgba(0, 0, 0, 0.2);
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(0, 0, 0, 0.7);
   white-space: nowrap;
   border-radius: 16px;
   margin-bottom: 8px;
@@ -84,7 +87,7 @@ hr {
 
 .dashboard__number {
   font-size: 32px;
-  color: #0ebf8c;
+  color: #3366CC;
   font-weight: bold;
   text-align: center;
   padding-bottom: 4px;
@@ -93,17 +96,18 @@ hr {
 .dashboard__subtitle {
   font-size: 14px;
   text-align: center;
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .table {
-  border-collapse: collapse;
   width: 100%;
+  border-radius: 4px;
+  border-collapse: collapse;
 }
 
 td,
 th {
-  padding: 16px;
+  padding: 12px;
   text-align: left;
   font-weight: normal;
   border: 1px solid #ddd;
@@ -111,12 +115,6 @@ th {
 
 tr:hover {
   background: #f0f0f0;
-}
-
-th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
 }
 
 .table__head {
